# ImageStack

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  configDependencies.sh  initDependencies.sh
Data/: README.md  ascending_Mask.bst  ones_Mask.bst  ones_Slices.bst  zero_Mask.bst  zero_Slices.bst
Dependencies/cmake/: ImportEigen.cmake
Examples/: CMakeLists.txt  imageViewer.cpp
ImageStack.xcodeproj/: project.pbxproj
ImageStack.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ImageStack.xcodeproj/project.xcworkspace/xcshareddata/: ImageStack.xcscmblueprint
ImageStack.xcodeproj/project.xcworkspace/xcuserdata/stefan.xcuserdatad/: UserInterfaceState.xcuserstate
ImageStack.xcodeproj/xcuserdata/stefan.xcuserdatad/xcschemes/: ImageViewer.xcscheme  Tests.xcscheme  xcschememanagement.plist
Tests/: CMakeLists.txt  config.h.in  testBSTLoader.cpp  testHostStorage.cpp  testImageStack.cpp  testMappedMemory.cpp  testMultiIndex.cpp  testSampler.cpp
cmake/: ImageStackConfig.cmake.in  ImportEigen.cmake  ImportGSL.cmake  ImportGTest.cmake
cmake/Hunter/: config.cmake
include/ImageStack/: BinaryStream.h  Debug.h  Filter.h  GaussFilter.h  HostStorage.h  ImageStack.h  ImageStackForward.h  ImageStackLoader.h  ImageStackLoaderBST.h  MappedMemory.h  MultiIndex.h  ResolutionDecorator.h  Sampler.h  TypeTraits.h  Types.h
